# basic-deep-learning

./: .readthedocs.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
docs/source/: activations_registry.rst  conf.py  dec.rst  forward_prop.rst  func.rst  functionalities.rst  getters_setters.rst  getting_started.rst  index.rst  init.rst  installation.rst  linear_algebra.rst  matrix.rst  misc.rst  mlp.rst  mlp_init.rst  models.rst  ops.rst  quickstart.rst  tutorials.rst  zero_rand.rst
src/basic_deep_learning/: __init__.py
src/basic_deep_learning.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/basic_deep_learning/functionality/: __init__.py  activations_registry.py  matrix.py  matrix_ops.cp312-win_amd64.pyd  matrix_ops.cp313-win_amd64.pyd  matrix_ops.cpp  setup.py
src/basic_deep_learning/miscellaneous/: __init__.py  decorators.py  linear_algebra.py
src/basic_deep_learning/models/: __init__.py  mlp.py
src/cpp/: Matrix.cpp  Matrix.h
tests/: misc-func tests.py  tests.py
