[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "basic-deep-learning"
version = "0.1.0"
description = "Simple module for creating deep learning tools, with its own linear algebra and matrices utilities."
readme = "README.md"
authors = [
    { name = "Diaa Eddine ZAINI", email = "zainidiaaeddine@gmail.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["deep learning", "machine learning", "linear algebra", "matrix operations"]
dependencies = [
    "matplotlib>=3.5.0"
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/therealzaini/basic-deep-learning"
Documentation = "https://basic-deep-learning.readthedocs.io/"
Repository = "https://github.com/therealzaini/basic-deep-learning"
Issues = "https://github.com/therealzaini/basic-deep-learning/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
basic_deep_learning = "src/basic_deep_learning"

urls = "https://doi.org/10.5281/zenodo.16934656"